@@ -1,3 +1,7 @@
+2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-setup.m4: Disable LuaJITTeX for known unsupported systems.
+
 2014-03-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-luajit-flags.m4 (KPSE_LUAJIT_DEFINES): Set LUAJIT_LDEXTRA
